--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
   
   <title>Frontend Mentor | Social links profile</title>
 
@@ -17,7 +17,7 @@
 <body>
     <div class="container">
         <div class="content">
-            <img src="images/avatar-jessica.jpeg" alt="">
+            <img src="avatar-jessica.jpeg" alt="">
             <div class="text">
                 <h2>Jessia Randall</h2>
                 <span>London, United Kingdom</span>
